<resources>
    <string name="app_name">BarCode Scanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uan">UAN:</string>
    <string name="name">Name:</string>
    <string name="price">Price:</string>
    <string name="rs">Rs</string>
    <string name="camera_permission">Camera Permission Needed</string>
    <string name="permission_dialog_description">\"This Permission Needed For The Better Experience Of The App. \"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">User Name</string>
    <string name="logout">Logout</string>
    <string name="connected_wifi">Connected WIFI:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="configure_ip">Configure IP</string>
    <string name="enter_ip_address">Enter Ip Address</string>
</resources>