<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.softvalley.barcodescanner.utils.CONSTANTS"/>
        <variable
            name="viewModel"
            type="com.softvalley.barcodescanner.viewModel.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            tools:context=".view.authentication.LoginFragment">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/softlogo"
                app:layout_constraintBottom_toTopOf="@id/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/app_theme_color_primary"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:cardBackgroundColor="@color/app_theme_color_primary"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:layout_constraintBottom_toTopOf="@id/btn_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="30dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/et_username_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elevation="5dp"
                        android:hint="@string/user_name"
                        app:boxBackgroundColor="@color/white"
                        app:boxStrokeColor="@android:color/darker_gray"
                        app:boxStrokeErrorColor="@android:color/holo_red_dark"
                        app:hintTextColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:startIconDrawable="@drawable/ic_baseline_person_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:text="@={viewModel.userNameMutableLiveData}" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/et_password_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:elevation="5dp"
                        android:hint="@string/password"
                        app:boxBackgroundColor="@color/white"
                        app:boxStrokeColor="@android:color/darker_gray"
                        app:boxStrokeErrorColor="@android:color/holo_red_dark"
                        app:endIconMode="password_toggle"
                        app:hintTextColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_username_layout"
                        app:startIconDrawable="@android:drawable/ic_lock_lock">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:text="@={viewModel.passwordMutableLiveData}"

                            />

                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
                android:onClick="@{()-> viewModel.onClick(CONSTANTS.BTN_LOGIN)}"
                android:padding="10dp"
                android:text="@string/sign_in"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toStartOf="@id/btn_ip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/card_view"
                app:layout_constraintTop_toBottomOf="@+id/card_view" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="@{()-> viewModel.onClick(CONSTANTS.BTN_IP)}"
                android:padding="10dp"
                android:text="@string/configure_ip"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@id/btn_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_login"
                app:layout_constraintTop_toTopOf="@+id/btn_login" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>